Version Changes for Hypermail

~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

 Jose Kahan (Jun 10, 2003)
  - Adding new messages using the -u option to an existing file sometimes resulted
    in warnings saying "Message-ID is missing, ignoring message with subject..."
    Patch idea submitted by Peter.

 Jose Kahan (Jun 10, 2003)
  - The incremental option (-u) always started new archives with 0001, rather
    than 0000. It will now start with 0000 as before
    For those people who had this problem and don't want to break any links to their
    archives when rebuilding them, there's a new configuration option allowing you
    to tell from which number you want to start your archive: startmsgnum. You should
    only set it up once and not modify it for an existing archive or your links may 
    break.
    A warning message appeared systematically because the showhr, which is now deprecated,
    was turned on by default.

 Peter McCluskey (May 22, 2003)
  - add Italian support from Gabriele Bartolini and Marco Nenciarini.

 Peter McCluskey (May 16, 2003)
  - Fixed initialization of prior_subdir when dirs created out of
   order. That fixes a case where a subdir wasn't in index files with
   reverse_folders = 1.

 Jose Kahan (May 13, 2003)
   - Add the WAI enhancements proposed in 
     http://www.w3.org/2002/03/archives-improvements/. 
     As a consequence of this change, the sethr and usetable configuration
     options are deprecated. The new markup takes into account the changes
     that those options proposed and offers them in a WAI friendly way.
     Some code cleaning needs yet to be done to remove all the cases
     where those rules were used. Previous code version is tagged as
     "before-wai".
     Fixed some invalid XHTML markup too.

 Peter McCluskey (May 12, 2003)
   - fix txtsuffix to not crash on null pointer.
   - fix discard_dup_msgids to work when showprogress = 0.

 Peter McCluskey (April 24, 2003)